tests/good/test125.tig
let
  type a = array of int
  var a := a[4] of 0
  var i := 1
  var w := 3
in
  while i >= 0 & a[i] > w do (
    i := i - 1
  );
  a[i+1] := w
end